# personal-leptos

./: .gitignore  Cargo.toml  index.html  input.css  package-lock.json  personal_test-4b2e859cb154a5c4.js  personal_test-4b2e859cb154a5c4_bg.wasm  personal_test-b05c18bcbba2c122.js  personal_test-b05c18bcbba2c122_bg.wasm  personal_test-d0f37950c6284a78.js  personal_test-d0f37950c6284a78_bg.wasm  tailwind.config.js
.github/workflows/: deploy_page.yml
src/: app.rs  home.rs  main.rs  postcard.rs  work.rs
src/components/: mod.rs  postcard.rs  work.rs
style/: output.css
